--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container bg-light" id="root"></div>
+<div id="modal"></div>
+<%= javascript_pack_tag 'blog' %>
